:bug: Fix: 추천 관련 에러 수정 - 500 에러 해결, dto 필드 변경