@@ -15,12 +15,7 @@ import yegam.opale_be.domain.place.repository.PlaceRepository;
 import yegam.opale_be.domain.preference.entity.UserPreferenceVector;
 import yegam.opale_be.domain.preference.repository.UserPreferenceVectorRepository;
 import yegam.opale_be.domain.preference.util.ZeroVectorUtil;
-import yegam.opale_be.domain.recommendation.dto.response.RecommendationChatRoomListResponseDto;
-import yegam.opale_be.domain.recommendation.dto.response.RecommendationPerformanceListResponseDto;
-import yegam.opale_be.domain.recommendation.dto.response.RecommendationPlaceListResponseDto;
-import yegam.opale_be.domain.recommendation.dto.response.RecommendedChatRoomDto;
-import yegam.opale_be.domain.recommendation.dto.response.RecommendedPerformanceDto;
-import yegam.opale_be.domain.recommendation.dto.response.RecommendedPlaceDto;
+import yegam.opale_be.domain.recommendation.dto.response.*;
 import yegam.opale_be.domain.recommendation.exception.RecommendationErrorCode;
 import yegam.opale_be.domain.recommendation.mapper.RecommendationMapper;
 import yegam.opale_be.domain.recommendation.util.EmbeddingVectorUtil;
@@ -46,13 +41,11 @@ public class RecommendationService {
   private final EmbeddingVectorUtil embeddingVectorUtil;
   private final PineconeClientUtil pineconeClientUtil;
 
-  // ⭐ cold-start 대응용 0-vector 유틸
-  private final ZeroVectorUtil zeroVectorUtil;
+  private final ZeroVectorUtil zeroVectorUtil; // ⭐ cold-start helper
 
-  // ----------------------------------------------------------------------
-  // 공통 헬퍼
-  // ----------------------------------------------------------------------
-
+  // ================================
+  // common helpers
+  // ================================
   private String normalizeSort(String sort) {
     if (sort == null || sort.isBlank()) return "auto";
     return sort.toLowerCase();
@@ -65,9 +58,7 @@ public class RecommendationService {
   }
 
   private RecommendationPerformanceListResponseDto buildVectorBasedRecommendation(
-      List<Double> vector,
-      int size,
-      String sort
+      List<Double> vector, int size, String sort
   ) {
     String normalizedSort = normalizeSort(sort);
     int topK = normalizeSize(size);
@@ -83,9 +74,7 @@ public class RecommendationService {
           .build();
     }
 
-    List<String> ids = matches.stream()
-        .map(PineconeMatch::getId)
-        .toList();
+    List<String> ids = matches.stream().map(PineconeMatch::getId).toList();
 
     Map<String, Double> scoreMap = matches.stream()
         .collect(Collectors.toMap(PineconeMatch::getId, PineconeMatch::getScore));
@@ -96,7 +85,6 @@ public class RecommendationService {
         .collect(Collectors.toMap(Performance::getPerformanceId, p -> p));
 
     List<RecommendedPerformanceDto> dtoList = new ArrayList<>();
-
     for (String id : ids) {
       Performance p = performanceMap.get(id);
       if (p == null) continue;
@@ -105,31 +93,18 @@ public class RecommendationService {
     }
 
     switch (normalizedSort) {
-
-      case "latest" -> dtoList.sort(
-          Comparator.comparing(
+      case "latest" ->
+          dtoList.sort(Comparator.comparing(
               (RecommendedPerformanceDto d) -> d.getStartDate(),
               Comparator.nullsLast(Comparator.naturalOrder())
-          ).reversed()
-      );
+          ).reversed());
 
-      case "popularity" -> dtoList.sort(
-          Comparator.comparing(
+      case "popularity" ->
+          dtoList.sort(Comparator.comparing(
               (RecommendedPerformanceDto d) -> d.getRating() != null ? d.getRating() : 0.0
-          ).reversed()
-      );
+          ).reversed());
 
-      case "similarity" -> {
-        // do nothing — Pinecone score 유지
-      }
-
-      case "auto" -> {
-        // do nothing — Pinecone score 유지
-      }
-
-      default -> {
-        // do nothing
-      }
+      // similarity / auto → Pinecone score 유지
     }
 
     return RecommendationPerformanceListResponseDto.builder()
@@ -140,82 +115,75 @@ public class RecommendationService {
         .build();
   }
 
-  // ----------------------------------------------------------------------
-  // 1) 개인화 추천 (로그인 사용자)
-  // ----------------------------------------------------------------------
-
-  /** ⭐ 유저 개인화 추천 (벡터 없으면 0-vector 생성 후 사용) */
-  @Transactional  // readOnly=false로 override (새 벡터 생성 가능)
+  // ================================
+  // 1) Personalized Recommendation
+  // ================================
+  @Transactional  // ⭐ save 안 하지만 read-only false (future safe)
   public RecommendationPerformanceListResponseDto getUserRecommendations(Long userId, Integer size, String sort) {
 
-    UserPreferenceVector vectorEntity = preferenceRepository.findById(userId)
-        .orElseGet(() -> {
-          // 벡터 없으면 1536차원 0-vector로 초기화
-          UserPreferenceVector newVec = UserPreferenceVector.builder()
-              .userId(userId)
-              .embeddingVector(zeroVectorUtil.generateZeroVectorJson())
-              .build();
-          UserPreferenceVector saved = preferenceRepository.save(newVec);
-          log.info("⭐ 사용자 벡터 초기화 (getUserRecommendations): userId={}", userId);
-          return saved;
-        });
+    UserPreferenceVector vec = preferenceRepository.findById(userId).orElse(null);
 
-    List<Double> vector = embeddingVectorUtil.parseToList(vectorEntity.getEmbeddingVector());
+    List<Double> vector;
+    if (vec == null) {
+      // ⭐ 벡터 없으면 Zero Vector 사용
+      vector = zeroVectorUtil.generateZeroVector();
+      log.info("⭐ Cold-start user → zero vector 사용 (userId={})", userId);
+    } else {
+      vector = embeddingVectorUtil.parseToList(vec.getEmbeddingVector());
+    }
+
     return buildVectorBasedRecommendation(vector, size, sort);
   }
 
-  // ----------------------------------------------------------------------
-  // 2) 운영자용 개인화 추천 (userId 직접 입력)
-  // ----------------------------------------------------------------------
-
-  /** ⭐ 운영자용도 동일하게 cold-start 방어 */
+  // ================================
+  // 2) Personalized (Admin Tool)
+  // ================================
   @Transactional
   public RecommendationPerformanceListResponseDto getUserRecommendationsByAdmin(Long userId, Integer size, String sort) {
 
-    UserPreferenceVector vectorEntity = preferenceRepository.findById(userId)
-        .orElseGet(() -> {
-          UserPreferenceVector newVec = UserPreferenceVector.builder()
-              .userId(userId)
-              .embeddingVector(zeroVectorUtil.generateZeroVectorJson())
-              .build();
-          UserPreferenceVector saved = preferenceRepository.save(newVec);
-          log.info("⭐ 관리자 호출로 사용자 벡터 초기화: userId={}", userId);
-          return saved;
-        });
+    UserPreferenceVector vec = preferenceRepository.findById(userId).orElse(null);
 
-    List<Double> vector = embeddingVectorUtil.parseToList(vectorEntity.getEmbeddingVector());
+    List<Double> vector;
+    if (vec == null) {
+      vector = zeroVectorUtil.generateZeroVector();
+      log.info("⭐ Admin cold-start user → zero vector 사용 (userId={})", userId);
+    } else {
+      vector = embeddingVectorUtil.parseToList(vec.getEmbeddingVector());
+    }
+
     return buildVectorBasedRecommendation(vector, size, sort);
   }
 
-  // ----------------------------------------------------------------------
-  // 3) 특정 공연과 비슷한 공연 추천
-  // ----------------------------------------------------------------------
-
+  // ================================
+  // 3) Similarity
+  // ================================
   public RecommendationPerformanceListResponseDto getSimilarPerformances(String performanceId, Integer size, String sort) {
-    Performance performance = performanceRepository.findById(performanceId)
+
+    Performance p = performanceRepository.findById(performanceId)
         .orElseThrow(() -> new CustomException(PerformanceErrorCode.PERFORMANCE_NOT_FOUND));
 
-    if (performance.getEmbeddingVector() == null || performance.getEmbeddingVector().isBlank()) {
+    if (p.getEmbeddingVector() == null || p.getEmbeddingVector().isBlank()) {
       throw new CustomException(RecommendationErrorCode.PERFORMANCE_VECTOR_NOT_FOUND);
     }
 
-    List<Double> vector = embeddingVectorUtil.parseToList(performance.getEmbeddingVector());
+    List<Double> vector = embeddingVectorUtil.parseToList(p.getEmbeddingVector());
     RecommendationPerformanceListResponseDto result = buildVectorBasedRecommendation(vector, size, sort);
 
+    // 동일 공연 제외
     List<RecommendedPerformanceDto> filtered = result.getRecommendations().stream()
         .filter(dto -> !performanceId.equals(dto.getPerformanceId()))
-        .collect(Collectors.toList());
+        .toList();
 
     result.setRecommendations(filtered);
     result.setTotalCount(filtered.size());
     return result;
   }
 
-  // ----------------------------------------------------------------------
-  // 4) 장르 기반 추천 (DB 기반)
-  // ----------------------------------------------------------------------
-
+  // ================================
+  // 4) Genre
+  // ================================
   public RecommendationPerformanceListResponseDto getGenreRecommendations(String genre, Integer size, String sort) {
+
     String normalizedSort = normalizeSort(sort);
     int limit = normalizeSize(size);
     PageRequest pageable = PageRequest.of(0, limit);
@@ -231,7 +199,7 @@ public class RecommendationService {
 
     List<RecommendedPerformanceDto> dtoList = performances.stream()
         .map(p -> recommendationMapper.toPerformance(p, null))
-        .collect(Collectors.toList());
+        .toList();
 
     return RecommendationPerformanceListResponseDto.builder()
         .totalCount(dtoList.size())
@@ -241,19 +209,18 @@ public class RecommendationService {
         .build();
   }
 
-  // ----------------------------------------------------------------------
-  // 5) 인기 기반 추천
-  // ----------------------------------------------------------------------
-
+  // ================================
+  // 5) Popular
+  // ================================
   public RecommendationPerformanceListResponseDto getPopularRecommendations(Integer size) {
+
     int limit = normalizeSize(size);
     PageRequest pageable = PageRequest.of(0, limit);
 
-    List<Performance> performances = performanceRepository.findPopularPerformances(pageable);
+    List<Performance> list = performanceRepository.findPopularPerformances(pageable);
 
-    List<RecommendedPerformanceDto> dtoList = performances.stream()
-        .map(p -> recommendationMapper.toPerformance(p, null))
-        .collect(Collectors.toList());
+    List<RecommendedPerformanceDto> dtoList =
+        list.stream().map(p -> recommendationMapper.toPerformance(p, null)).toList();
 
     return RecommendationPerformanceListResponseDto.builder()
         .totalCount(dtoList.size())
@@ -263,19 +230,18 @@ public class RecommendationService {
         .build();
   }
 
-  // ----------------------------------------------------------------------
-  // 6) 최신 공연 추천
-  // ----------------------------------------------------------------------
-
+  // ================================
+  // 6) Latest
+  // ================================
   public RecommendationPerformanceListResponseDto getLatestRecommendations(Integer size) {
+
     int limit = normalizeSize(size);
     PageRequest pageable = PageRequest.of(0, limit);
 
-    List<Performance> performances = performanceRepository.findLatestPerformances(pageable);
+    List<Performance> list = performanceRepository.findLatestPerformances(pageable);
 
-    List<RecommendedPerformanceDto> dtoList = performances.stream()
-        .map(p -> recommendationMapper.toPerformance(p, null))
-        .collect(Collectors.toList());
+    List<RecommendedPerformanceDto> dtoList =
+        list.stream().map(p -> recommendationMapper.toPerformance(p, null)).toList();
 
     return RecommendationPerformanceListResponseDto.builder()
         .totalCount(dtoList.size())
@@ -285,16 +251,17 @@ public class RecommendationService {
         .build();
   }
 
-  // ------------------------------------------------------
-  // 7) 인기 공연장 추천
-  // ------------------------------------------------------
+  // ================================
+  // 7) Popular Places
+  // ================================
   public RecommendationPlaceListResponseDto getPopularPlaces(Integer size) {
+
     int limit = normalizeSize(size);
     PageRequest pageable = PageRequest.of(0, limit);
 
-    List<Place> places = placeRepository.findPopularPlaces(pageable);
+    List<Place> list = placeRepository.findPopularPlaces(pageable);
 
-    List<RecommendedPlaceDto> dtoList = places.stream()
+    List<RecommendedPlaceDto> dtoList = list.stream()
         .map(recommendationMapper::toPlace)
         .toList();
 
@@ -306,16 +273,17 @@ public class RecommendationService {
         .build();
   }
 
-  // ------------------------------------------------------
-  // 8) 인기 채팅방 추천
-  // ------------------------------------------------------
+  // ================================
+  // 8) Popular Chat Rooms
+  // ================================
   public RecommendationChatRoomListResponseDto getPopularChatRooms(Integer size) {
+
     int limit = normalizeSize(size);
     PageRequest pageable = PageRequest.of(0, limit);
 
-    List<ChatRoom> rooms = chatRoomRepository.findPopularChatRooms(pageable);
+    List<ChatRoom> list = chatRoomRepository.findPopularChatRooms(pageable);
 
-    List<RecommendedChatRoomDto> dtoList = rooms.stream()
+    List<RecommendedChatRoomDto> dtoList = list.stream()
         .map(recommendationMapper::toChatRoom)
         .toList();
 
